# seshat

./: README.md  pyproject.toml
seshat/: __init__.py  __main__.py  tuner.py
seshat/actions/: __init__.py  action_provider.py  action_registry.py  chat_provider.py  math_provider.py  text_provider.py
seshat/application/: __init__.py  answer_row.py  application.py  command.py  command_list.py  command_palette.py  command_row.py
seshat/i18n/: __init__.py  l10n.py
seshat/locales/ca/LC_MESSAGES/: seshat.po
seshat/locales/es/LC_MESSAGES/: seshat.po
seshat/resources/: answer_row.ui  command_list.ui  command_palette.ui  command_row.ui  config.json  examples.json  prompt.ai  theme.css
seshat/tasks/: __init__.py  task_context.py  task_executor.py
seshat/utils/: __init__.py  clipboard_manager.py  config_manager.py  hotkey_listener.py
