[tool.poetry]
name = "seshat"
version = "0.1.0"
description = "A GTK-based command palette with AI capabilities"
authors = ["Joan Sala <contact@joansala.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/joansala/seshat"
packages = [{include = "seshat"}]

[tool.poetry.dependencies]
python = "^3.10"
pygobject = "^3.52.0"
pycairo = "^1.28.0"
evdev = "^1.9.0"
requests = "^2.32.0"
asteval = "^1.0.0"
aiohttp = "^3.11.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
seshat = "seshat.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88